fork from main stream

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -14,7 +14,7 @@ body {
     margin: -10px -20px 0 0 !important;
 }
 
-div.ant-modal-title > div > span {
+div.ant-modal-title>div>span {
     margin-right: 10px !important;
 }
 
@@ -48,7 +48,6 @@ div.ant-modal-title > div > span {
     min-width: 100vh;
 }
 
-
 .ant-table-wrapper::after {
     color: red;
     background-color: white;
@@ -79,14 +78,14 @@ div.ant-modal-title > div > span {
     /*滚动条里面小方块*/
     border-radius: 5px;
     -webkit-box-shadow: inset 12px rgb(2, 78, 6) !important;
-    background:  rgb(2, 62, 5) ;
+    background: rgb(2, 62, 5);
 }
 
 ::-webkit-scrollbar-track {
     /*滚动条里面轨道*/
-    -webkit-box-shadow: inset 12px  rgb(185, 181, 186) !important;
+    -webkit-box-shadow: inset 12px rgb(185, 181, 186) !important;
     border-radius: 0;
-    background:  rgb(207, 201, 207) ;
+    background: rgb(207, 201, 207);
 }
 
 // 错误信息屏蔽
@@ -111,11 +110,21 @@ div.ant-modal-title > div > span {
     border: #fff;
 }
 
-.ant-tree-checkbox-disabled > span {
+// 帮助
+
+.help-tip {
+    color: white;
+    margin-left: 4px;
+    border-radius: 1px;
+    border: #fff;
+}
+
+
+.ant-tree-checkbox-disabled>span {
     border-color: rgb(5, 82, 9) !important;
 }
 
-.ant-tree-checkbox-disabled > span::after {
+.ant-tree-checkbox-disabled>span::after {
     border-color: rgb(5, 82, 9) !important;
 }
 
@@ -145,17 +154,149 @@ div.ant-modal-title > div > span {
 }
 
 // message
-span.anticon.anticon-info-circle{
+span.anticon.anticon-info-circle {
     color: #035017 !important;
 }
-span.anticon.anticon-check-circle{
+
+span.anticon.anticon-check-circle {
     color: #035017 !important;
 }
- 
-span.anticon.anticon-close-circle{
+
+span.anticon.anticon-close-circle {
     color: #191819 !important;
 }
 
-span.anticon.anticon-exclamation-circle{
+span.anticon.anticon-exclamation-circle {
     color: #191819 !important;
+}
+
+.formWrapper {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+
+// .fromBox {
+//     width: 50%;
+//     flex: 1 1 100%; /* 每个 fromBox 占据整行 */
+//     display: flex;
+//     justify-content: flex-start; // 靠左对齐
+//     border: 1px solid #225e04;
+//     flex-wrap: wrap; // 换行
+//     flex-direction: row; /* 默认是 row，这一行可以省略 */
+
+// }
+
+.fromBox {
+    flex: 1 1 35%; /* 每个 fromBox 占据整行 */
+    box-sizing: border-box;
+    display: flex; /* 让 formItem 在同一行内显示 */
+}
+
+.formItem {
+    display: flex;
+    align-items: center;
+    /* Align items vertically in the center */
+    height: 44px;
+    justify-content: flex-start; // 靠左对齐
+    flex-direction: row; /* 默认是 row，这一行可以省略 */
+    // width: calc((100% - 20px) / 1); // 这个是公式，减去边距以后一行放多少个。
+}
+
+.formItem:first-child {
+    flex: 0 0 135px; /* 第一个 formItem 固定宽度 */
+}
+
+.formItemBig {
+    display: flex;
+    align-items: center;
+    /* Align items vertically in the center */
+    height: 44px;
+    width: 680px
+}
+
+.formItem svg {
+    vertical-align: middle;
+}
+ 
+div.longSelect {
+    width: 668px !important;
+}
+
+
+
+.ant-tabs-tab-active {
+    background: rgb(1, 63, 24) !important;
+}
+
+.ant-tabs-tab-active>div {
+    color: #d3e1d6 !important;
+}
+
+/** hero icons */
+
+.w-5 {
+    height: 20px;
+    width: 20px;
+    margin-right: 4px;
+}
+
+/* uform css hack */
+/* Apply styles when input is hovered or focused */
+.ant-input input:hover,
+.ant-input input:focus,
+.ant-input:focus-within,
+.ant-input-number input:hover,
+.ant-input-number input:focus,
+.ant-input-number:focus-within {
+    border-color: #225e04 !important;
+}
+
+/* Apply styles to the input when the parent wrapper is focused or focused within */
+.ant-input-affix-wrapper:focus,
+.ant-input-affix-wrapper:focus-within,
+.ant-input-number-affix-wrapper:focus,
+.ant-input-number-affix-wrapper:focus-within {
+    border-color: #225e04 !important;
+    box-shadow: 0 0 0 1px rgba(5, 145, 255, 0.1);
+    outline: 0;
+}
+
+/* Apply styles to the wrapper when hovered, active, or focused */
+.ant-input-affix-wrapper:hover,
+.ant-input-affix-wrapper:active,
+.ant-input-affix-wrapper:focus,
+.ant-input-number-affix-wrapper:hover,
+.ant-input-number-affix-wrapper:active,
+.ant-input-number-affix-wrapper:focus {
+    border: 1px solid #225e04 !important;
+}
+
+.ant-input:hover {
+    border-color: #225e04 !important;
+}
+
+.ant-select-open,
+.ant-select-selection-search {
+    border-color: #225e04 !important;
+}
+
+.ant-select-open:focus-within {
+    border-color: #225e04 !important;
+}
+
+.ant-select-open:focus {
+    border-color: #225e04 !important;
+}
+
+.ant-select:hover {
+    border-color: #225e04 !important;
+}
+
+.ant-select-selector:hover,
+.ant-select-selector:focus,
+.ant-select-selector:active {
+    border-color: #225e04 !important;
 }
